# prototypes-experiments

./: .gitignore  README.md  build.py
data-access/event-sourcing-example/: README.md  docker-compose.yml  pyproject.toml  run-local.sh
data-access/event-sourcing-example/event_sourcing_example/: database.py  main.py  settings.py
data-access/event-sourcing-example/event_sourcing_example/alembic/: env.py
data-access/event-sourcing-example/event_sourcing_example/alembic/versions/: 0b5cc674430e_initial_migration.py
data-access/event-sourcing-example/event_sourcing_example/api/: event_sourcing_example.py
data-access/event-sourcing-example/event_sourcing_example/event_processor/: event.py  event_processor.py  model.py
data-access/event-sourcing-example/event_sourcing_example/example_data/: event_models.py  event_processor.py  example_data.py  models.py  repository.py
data-access/exampleStrEnumError/: docker-compose.yml  init.sql  pyproject.toml  test_psql_string_enum.py
gateways/inbound-data-gateway/: app-local.sh  app-start-reload.sh  build.sh  pyproject.toml  run-local.sh
gateways/inbound-data-gateway/inbound_data_gateway/: main.py  settings.py
gateways/inbound-data-gateway/inbound_data_gateway/api/: example_data.py
gateways/inbound-data-gateway/inbound_data_gateway/clients/: event_sourcing_example_client.py
gateways/inbound-data-gateway/inbound_data_gateway/example_data/: example_data.py  models.py
libraries/auth/: increment_version.sh  pyproject.toml
libraries/auth/auth/: exceptions.py  external_auth.py  internal_auth.py  issuers.py  jwt.py
