[tool.poetry]
name = "examplestrenumerror"
version = "0.1.0"
description = ""
authors = ["Juan Pablo <juanpaps03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^1.4"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
