[tool.poetry]
name = "inbound-data-gateway"
version = "0.1.0"
description = ""
authors = ["Juan Pablo <juanpaps03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pydantic-settings = "^2.6.1"
auth = {path = "../../libraries/auth"} # rename this to authlib or internal-auth-lib
structlog = "^24.4.0"
httpx = "^0.28.1"
uvicorn = "^0.32.1"


[tool.poetry.group.dev.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.6"}
mypy = "^1.13.0"
pytest = "^8.3.4"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
